--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="textas">
         <div class="pgr">
             <h1>HAROKI</h1>
-            <div class="sec"><a href="#">DISCORD</a><a href="https://www.youtube.com/watch?v=ub82Xb1C8os">PORTFOLIO</a></div>
+            <div class="sec"><a href="https://www.youtube.com/watch?v=ub82Xb1C8os">DISCORD</a><a href="https://www.youtube.com/watch?v=ub82Xb1C8os">PORTFOLIO</a></div>
         </div>
     </div>
 </body>
