--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAROKI</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/dist/style.css">
 </head>
 <body>
     <div class="textas">
-        <div class="pgr">
-            <h1>HAROKI</h1>
-            <div class="sec"><a href="https://www.youtube.com/watch?v=ub82Xb1C8os">DISCORD</a><a href="https://www.youtube.com/watch?v=ub82Xb1C8os">PORTFOLIO</a></div>
+        <h1>
+            <span class="glitch" data-text="haroki">
+                haroki
+              </span>
+        </h1>
+        <div class="mygtukai">
+            <a href="https://discord.gg/AVPkT7bpT9">discord</a>
+            <a href="" onclick="secret()">secret</a>
         </div>
     </div>
 </body>
+<script>
+    function secret() {
+      alert(`MrAinius scamina vaikus :)`);
+    }
+    </script>
 </html>
+
