--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>Haroki</h1>
         </div>
         <div class="sub">
-            <p>something is missing...</p>
+            <a href="#">Discord</a>
         </div>
     </div>
 </body>
