--- a/index.html
+++ b/index.html
@@ -9,13 +9,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="center">
-        <div class="textas">
-            <h1>Haroki</h1>
-        </div>
-        <div class="sub">
-            <a href="#">Discord</a>
-        </div>
-    </div>
+    <video controls id="myvideo">
+  <source src="video_1.mp4"></source>
+</video>
+    <script>
+        var elem = document.getElementById("myvideo");
+if (elem.requestFullscreen) {
+  elem.requestFullscreen();
+} else if (elem.mozRequestFullScreen) {
+  elem.mozRequestFullScreen();
+} else if (elem.webkitRequestFullscreen) {
+  elem.webkitRequestFullscreen();
+} else if (elem.msRequestFullscreen) { 
+  elem.msRequestFullscreen();
+}
+    </script>
 </body>
 </html>
