--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<div class="video-container">
     <video controls id="myvideo">
-  <source src="video_1.mp4"></source>
-</video>
+        <source src="video_1.mp4"></source>
+    </video>
+</div>
     <script>
         var elem = document.getElementById("myvideo");
 if (elem.requestFullscreen) {
