--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="video-container">
-    <video controls id="myvideo" autoplay>
+    <video controls id="myvideo" autoplay="autoplay" controls muted>
         <source src="video_1.mp4"></source>
     </video>
 </div>
