--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <video controls id="myvideo" autoplay="autoplay" controls muted>
         <source src="video_1.mp4"></source>
     </video>
+    <audio  autoplay="autoplay">
+        <source src="video_1.mp3" type="audio/mpeg">
+    </audio>
 </div>
     <script>
         var elem = document.getElementById("myvideo");
