--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <video controls id="myvideo" autoplay="autoplay" controls muted>
         <source src="video_1.mp4"></source>
     </video>
-    <audio  autoplay="autoplay">
+    <audio  <audio controls autoplay>>
         <source src="video_1.mp3" type="audio/mpeg">
     </audio>
 </div>
