--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </audio>
 </div>
     <script>
+        audioElement.play();
         var elem = document.getElementById("myvideo");
 if (elem.requestFullscreen) {
   elem.requestFullscreen();
