--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <video controls id="myvideo" autoplay="autoplay" controls muted>
         <source src="video_1.mp4"></source>
     </video>
+    <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
     <audio  <audio controls autoplay>>
         <source src="video_1.mp3" type="audio/mpeg">
     </audio>
