--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Harokis Kietas 3></title>
     <link rel="stylesheet" href="css/style.css">
+    <script>
+window.onload = function() {
+  var context = new AudioContext();
+}
+</script>
 </head>
 <body>
 <div class="video-container">
